--- a/Java/.settings/PROJECT_PREFS_NODE.prefs
+++ b/Java/.settings/PROJECT_PREFS_NODE.prefs
@@ -1,3 +1,3 @@
-PROCESSING_APP_PATH=C\:\\Users\\pentla\\Desktop\\Processing\\
+PROCESSING_APP_PATH=C\:\\Users\\pentla\\processing-2.1.1\\
 PROCESSING_SKETCH_PATH=C\:\\Users\\pentla\\Desktop\\Processing\\LightMask_ProcessingGUI\\
 eclipse.preferences.version=1
